crates/lowerer/tests/snapshots/upstream_parser_policy__error_recovery_2_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ error_recovery_2:1:28
  │
1 │ permit (principal, action, !)
  ╰╴                           ━
error: unexpected token
  ╭▸ error_recovery_2:4:28
  │
4 │ permit (principal, action, +);
  ╰╴                           ━
