crates/lowerer/tests/snapshots/upstream_parser_policy__error_recovery_3.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ test:1:9
  │
1 │ permit (principal, action, !)
  ╰╴        ━━━━━━━━━ expected `)`
error: missing policy effect
  ╭▸ test:1:28
  │
1 │   permit (principal, action, !)
  │ ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
2 │ ┃ when { principal.foo == resource.bar }
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ expected `permit` or `forbid`
