crates/lowerer/tests/snapshots/upstream_parser_policy__error_recovery_3_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ error_recovery_3:1:9
  │
1 │ permit (principal, action, !)
  ╰╴        ━━━━━━━━━ expected `)`
error: missing policy effect
  ╭▸ error_recovery_3:1:28
  │
1 │   permit (principal, action, !)
  │ ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
2 │ ┃ when { principal.foo == resource.bar }
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ expected `permit` or `forbid`
