crates/lowerer/tests/snapshots/upstream_parser_policy__expr_overflow_1.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: integer literal `-5555555555555555555555` is out of range
  ╭▸ test
  │
